--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/Appointments/AppointmentsComponent.en-US.resx
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/Appointments/AppointmentsComponent.en-US.resx
@@ -121,7 +121,7 @@
     <value>ACCEPT</value>
   </data>
   <data name="Appointments_AddedAppointment_Alert_Message" xml:space="preserve">
-    <value>Appointment {0} is successfully added</value>
+    <value>Appointment {0} was successfully added</value>
   </data>
   <data name="Appointments_AddedAppointment_Alert_Title" xml:space="preserve">
     <value>Add Appointment</value>
@@ -165,11 +165,20 @@
   <data name="Appointments_Clinic_DropDown_PlaceHolder" xml:space="preserve">
     <value>Search clinic...</value>
   </data>
+  <data name="Appointments_DeletedAppointment_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Appointments_DeletedAppointment_Alert_Message" xml:space="preserve">
+    <value>Appointment {0} was successfully deleted</value>
+  </data>
+  <data name="Appointments_DeletedAppointment_Alert_Title" xml:space="preserve">
+    <value>Delete Appointment</value>
+  </data>
   <data name="Appointments_EditedAppointment_Alert_Button_Ok" xml:space="preserve">
     <value>ACCEPT</value>
   </data>
   <data name="Appointments_EditedAppointment_Alert_Message" xml:space="preserve">
-    <value>Appointment {0} is successfully edited</value>
+    <value>Appointment {0} was successfully edited</value>
   </data>
   <data name="Appointments_EditedAppointment_Alert_Title" xml:space="preserve">
     <value>Edit Appointment</value>
