--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/Appointments/AppointmentsComponent.es-MX.resx
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/Appointments/AppointmentsComponent.es-MX.resx
@@ -165,6 +165,15 @@
   <data name="Appointments_Clinic_DropDown_PlaceHolder" xml:space="preserve">
     <value>Buscar clínica...</value>
   </data>
+  <data name="Appointments_DeletedAppointment_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="Appointments_DeletedAppointment_Alert_Message" xml:space="preserve">
+    <value>La consulta {0} se eliminó exitosamente</value>
+  </data>
+  <data name="Appointments_DeletedAppointment_Alert_Title" xml:space="preserve">
+    <value>Eliminar Consulta</value>
+  </data>
   <data name="Appointments_EditedAppointment_Alert_Button_Ok" xml:space="preserve">
     <value>ACEPTAR</value>
   </data>
