Missed language resource key for AddEditAppointment view in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/Appointments/AddEditAppointmentComponent.es-MX.resx
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/Appointments/AddEditAppointmentComponent.es-MX.resx
@@ -199,7 +199,7 @@
     <value>Editar Consulta</value>
   </data>
   <data name="AddEditAppointment_End_DatePicker_Label" xml:space="preserve">
-    <value>End Date</value>
+    <value>Fecha Final</value>
   </data>
   <data name="AddEditAppointment_End_DatePicker_RequiredMessage" xml:space="preserve">
     <value>Fecha final es requerida</value>
