--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/AppointmentTypes/AppointmentTypesComponent.es-MX.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/AppointmentTypes/AppointmentTypesComponent.es-MX.resx
@@ -117,6 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppointmentTypes_Add_Button_Text" xml:space="preserve">
+    <value>AGREGAR</value>
+  </data>
+  <data name="AppointmentTypes_AddedAppointmentType_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="AppointmentTypes_AddedAppointmentType_Alert_Message" xml:space="preserve">
+    <value>El tipo de consulta {0} se agregó exitosamente</value>
+  </data>
+  <data name="AppointmentTypes_AddedAppointmentType_Alert_Title" xml:space="preserve">
+    <value>Agregar Tipo de Consulta</value>
+  </data>
+  <data name="AppointmentTypes_DeleteAppointmentType_Alert_Button_Cancel" xml:space="preserve">
+    <value>NO</value>
+  </data>
+  <data name="AppointmentTypes_DeleteAppointmentType_Alert_Button_Ok" xml:space="preserve">
+    <value>SÍ</value>
+  </data>
+  <data name="AppointmentTypes_DeleteAppointmentType_Alert_Message" xml:space="preserve">
+    <value>¿Está seguro que desea eliminar el tipo de consulta {0}?</value>
+  </data>
+  <data name="AppointmentTypes_DeleteAppointmentType_Alert_Title" xml:space="preserve">
+    <value>Eliminar Tipo de Consulta</value>
+  </data>
+  <data name="AppointmentTypes_DeletedAppointmentType_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="AppointmentTypes_DeletedAppointmentType_Alert_Message" xml:space="preserve">
+    <value>El tipo de consulta {0} se eliminó exitosamente</value>
+  </data>
+  <data name="AppointmentTypes_DeletedAppointmentType_Alert_Title" xml:space="preserve">
+    <value>Eliminar Tipo de Consulta</value>
+  </data>
+  <data name="AppointmentTypes_EditedAppointmentType_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="AppointmentTypes_EditedAppointmentType_Alert_Message" xml:space="preserve">
+    <value>El tipo de consulta {0} se editó exitosamente</value>
+  </data>
+  <data name="AppointmentTypes_EditedAppointmentType_Alert_Title" xml:space="preserve">
+    <value>Editar Tipo de Consulta</value>
+  </data>
   <data name="AppointmentTypes_Grid_Column_Header_Code" xml:space="preserve">
     <value>Código</value>
   </data>
