--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clients/ClientsComponent.en-US.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clients/ClientsComponent.en-US.resx
@@ -117,6 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Clients_Add_Button_Text" xml:space="preserve">
+    <value>ADD</value>
+  </data>
+  <data name="Clients_AddedClient_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Clients_AddedClient_Alert_Message" xml:space="preserve">
+    <value>Client {0} was successfully added</value>
+  </data>
+  <data name="Clients_AddedClient_Alert_Title" xml:space="preserve">
+    <value>Add Client</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Button_Cancel" xml:space="preserve">
+    <value>NO</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Button_Ok" xml:space="preserve">
+    <value>YES</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Message" xml:space="preserve">
+    <value>Are you sure you want to delete the client {0}?</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Title" xml:space="preserve">
+    <value>Delete Client</value>
+  </data>
+  <data name="Clients_DeletedClient_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Clients_DeletedClient_Alert_Message" xml:space="preserve">
+    <value>Client {0} was successfully deleted</value>
+  </data>
+  <data name="Clients_DeletedClient_Alert_Title" xml:space="preserve">
+    <value>Delete Client</value>
+  </data>
+  <data name="Clients_EditedClient_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Clients_EditedClient_Alert_Message" xml:space="preserve">
+    <value>Client {0} was successfully edited</value>
+  </data>
+  <data name="Clients_EditedClient_Alert_Title" xml:space="preserve">
+    <value>Edit Client</value>
+  </data>
   <data name="Clients_Grid_Column_Header_EmailAddress" xml:space="preserve">
     <value>Email Address</value>
   </data>
