--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clients/ClientsComponent.es-MX.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clients/ClientsComponent.es-MX.resx
@@ -117,6 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Clients_Add_Button_Text" xml:space="preserve">
+    <value>AGREGAR</value>
+  </data>
+  <data name="Clients_AddedClient_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="Clients_AddedClient_Alert_Message" xml:space="preserve">
+    <value>El cliente {0} se agregó exitosamente</value>
+  </data>
+  <data name="Clients_AddedClient_Alert_Title" xml:space="preserve">
+    <value>Agregar Cliente</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Button_Cancel" xml:space="preserve">
+    <value>NO</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Button_Ok" xml:space="preserve">
+    <value>SÍ</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Message" xml:space="preserve">
+    <value>¿Está seguro que desea eliminar el cliente {0}?</value>
+  </data>
+  <data name="Clients_DeleteClient_Alert_Title" xml:space="preserve">
+    <value>Eliminar Cliente</value>
+  </data>
+  <data name="Clients_DeletedClient_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="Clients_DeletedClient_Alert_Message" xml:space="preserve">
+    <value>El cliente {0} se eliminó exitosamente</value>
+  </data>
+  <data name="Clients_DeletedClient_Alert_Title" xml:space="preserve">
+    <value>Eliminar Cliente</value>
+  </data>
+  <data name="Clients_EditedClient_Alert_Button_Ok" xml:space="preserve">
+    <value>ACEPTAR</value>
+  </data>
+  <data name="Clients_EditedClient_Alert_Message" xml:space="preserve">
+    <value>El cliente {0} se editó exitosamente</value>
+  </data>
+  <data name="Clients_EditedClient_Alert_Title" xml:space="preserve">
+    <value>Editar Cliente</value>
+  </data>
   <data name="Clients_Grid_Column_Header_EmailAddress" xml:space="preserve">
     <value>Correo Electrónico</value>
   </data>
