--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Rooms/RoomsComponent.en-US.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Rooms/RoomsComponent.en-US.resx
@@ -117,6 +117,48 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Rooms_Add_Button_Text" xml:space="preserve">
+    <value>ADD</value>
+  </data>
+  <data name="Rooms_AddedRoom_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Rooms_AddedRoom_Alert_Message" xml:space="preserve">
+    <value>Room {0} was successfully added</value>
+  </data>
+  <data name="Rooms_AddedRoom_Alert_Title" xml:space="preserve">
+    <value>Add Room</value>
+  </data>
+  <data name="Rooms_DeletedRoom_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Rooms_DeletedRoom_Alert_Message" xml:space="preserve">
+    <value>Room {0} was successfully deleted</value>
+  </data>
+  <data name="Rooms_DeletedRoom_Alert_Title" xml:space="preserve">
+    <value>Delete Room</value>
+  </data>
+  <data name="Rooms_DeleteRoom_Alert_Button_Cancel" xml:space="preserve">
+    <value>NO</value>
+  </data>
+  <data name="Rooms_DeleteRoom_Alert_Button_Ok" xml:space="preserve">
+    <value>YES</value>
+  </data>
+  <data name="Rooms_DeleteRoom_Alert_Message" xml:space="preserve">
+    <value>Are you sure you want to delete the room {0}?</value>
+  </data>
+  <data name="Rooms_DeleteRoom_Alert_Title" xml:space="preserve">
+    <value>Delete Room</value>
+  </data>
+  <data name="Rooms_EditedRoom_Alert_Button_Ok" xml:space="preserve">
+    <value>ACCEPT</value>
+  </data>
+  <data name="Rooms_EditedRoom_Alert_Message" xml:space="preserve">
+    <value>Room {0} was successfully edited</value>
+  </data>
+  <data name="Rooms_EditedRoom_Alert_Title" xml:space="preserve">
+    <value>Edit Room</value>
+  </data>
   <data name="Rooms_Grid_Column_Header_Id" xml:space="preserve">
     <value>Id</value>
   </data>
