Add profile transalations into MainLayout in ClinicManagement.BlazorClient.Client #23

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Shared/MainLayout.en-US.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Shared/MainLayout.en-US.resx
@@ -138,4 +138,10 @@
   <data name="MainLayout_Menu_Rooms" xml:space="preserve">
     <value>Rooms</value>
   </data>
+  <data name="MainLayout_ProfileMenu_Logout" xml:space="preserve">
+    <value>Log out</value>
+  </data>
+  <data name="MainLayout_ProfileMenu_Username" xml:space="preserve">
+    <value>Logged in as {0}</value>
+  </data>
 </root>
