--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Shared/MainLayout.es-MX.resx
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Shared/MainLayout.es-MX.resx
@@ -141,4 +141,10 @@
   <data name="MainLayout_Menu_Rooms" xml:space="preserve">
     <value>Habitaciones</value>
   </data>
+  <data name="MainLayout_ProfileMenu_Logout" xml:space="preserve">
+    <value>Cerrar sesión</value>
+  </data>
+  <data name="MainLayout_ProfileMenu_Username" xml:space="preserve">
+    <value>Conectado como {0}</value>
+  </data>
 </root>
