Add PreferredLanguage field into ClientDetailNotificationComponent page in ClinicManagement.BlazorClient.Client #27

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clients/ClientDetailNotificationComponent.en-US.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clients/ClientDetailNotificationComponent.en-US.resx
@@ -129,11 +129,20 @@
   <data name="ClientDetailNotification_Label_PreferredDoctor" xml:space="preserve">
     <value>Preferred Doctor</value>
   </data>
+  <data name="ClientDetailNotification_Label_PreferredLanguage" xml:space="preserve">
+    <value>Preferred Language</value>
+  </data>
   <data name="ClientDetailNotification_Label_PreferredName" xml:space="preserve">
     <value>Preferred Name</value>
   </data>
   <data name="ClientDetailNotification_Label_Salutation" xml:space="preserve">
     <value>Salutation</value>
+  </data>
+  <data name="ClientDetailNotification_PreferredLanguage_English" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="ClientDetailNotification_PreferredLanguage_Spanish" xml:space="preserve">
+    <value>Spanish</value>
   </data>
   <data name="ClientDetailNotification_RecordNotActive" xml:space="preserve">
     <value>The record is currently deleted</value>
