--- a/SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/Services/Language/Resources/Strings.es-MX.resx
+++ b/SchedulingES/src/Presentation/Fnunez.VeterinaryClinic.SchedulingEmailSender.Api/Services/Language/Resources/Strings.es-MX.resx
@@ -117,4 +117,82 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppointmentConfirmed_Label_Date" xml:space="preserve">
+    <value>Fecha:</value>
+  </data>
+  <data name="AppointmentConfirmed_Label_Doctor" xml:space="preserve">
+    <value>Doctor:</value>
+  </data>
+  <data name="AppointmentConfirmed_Label_Owner" xml:space="preserve">
+    <value>Dueño:</value>
+  </data>
+  <data name="AppointmentConfirmed_Label_Patient" xml:space="preserve">
+    <value>Paciente:</value>
+  </data>
+  <data name="AppointmentConfirmed_Message" xml:space="preserve">
+    <value>Su consulta está confirmada. ¡Estaremos encantados de verte pronto!.</value>
+  </data>
+  <data name="AppointmentConfirmed_Subject" xml:space="preserve">
+    <value>Consulta Confirmada</value>
+  </data>
+  <data name="AppointmentCreated_Button_Confirm" xml:space="preserve">
+    <value>Confirmar Consulta</value>
+  </data>
+  <data name="AppointmentCreated_Label_Date" xml:space="preserve">
+    <value>Fecha:</value>
+  </data>
+  <data name="AppointmentCreated_Label_Doctor" xml:space="preserve">
+    <value>Doctor:</value>
+  </data>
+  <data name="AppointmentCreated_Label_Owner" xml:space="preserve">
+    <value>Dueño:</value>
+  </data>
+  <data name="AppointmentCreated_Label_Patient" xml:space="preserve">
+    <value>Paciente:</value>
+  </data>
+  <data name="AppointmentCreated_Message" xml:space="preserve">
+    <value>Su consulta ha sido reservada. Por favor verifique y confirme la siguiente información.</value>
+  </data>
+  <data name="AppointmentCreated_Subject" xml:space="preserve">
+    <value>Consulta Reservada</value>
+  </data>
+  <data name="AppointmentDeleted_Label_Date" xml:space="preserve">
+    <value>Fecha:</value>
+  </data>
+  <data name="AppointmentDeleted_Label_Doctor" xml:space="preserve">
+    <value>Doctor:</value>
+  </data>
+  <data name="AppointmentDeleted_Label_Owner" xml:space="preserve">
+    <value>Dueño:</value>
+  </data>
+  <data name="AppointmentDeleted_Label_Patient" xml:space="preserve">
+    <value>Paciente:</value>
+  </data>
+  <data name="AppointmentDeleted_Message" xml:space="preserve">
+    <value>Su consulta ha sido cancelada.</value>
+  </data>
+  <data name="AppointmentDeleted_Subject" xml:space="preserve">
+    <value>Consulta Cancelada</value>
+  </data>
+  <data name="AppointmentUpdated_Button_Confirm" xml:space="preserve">
+    <value>Confirmar Consulta</value>
+  </data>
+  <data name="AppointmentUpdated_Label_Date" xml:space="preserve">
+    <value>Fecha:</value>
+  </data>
+  <data name="AppointmentUpdated_Label_Doctor" xml:space="preserve">
+    <value>Doctor:</value>
+  </data>
+  <data name="AppointmentUpdated_Label_Owner" xml:space="preserve">
+    <value>Dueño:</value>
+  </data>
+  <data name="AppointmentUpdated_Label_Patient" xml:space="preserve">
+    <value>Paciente:</value>
+  </data>
+  <data name="AppointmentUpdated_Message" xml:space="preserve">
+    <value>Su consulta ha sido actualizada. Por favor verifique y confirme la siguiente información.</value>
+  </data>
+  <data name="AppointmentUpdated_Subject" xml:space="preserve">
+    <value>Consulta Actualizada</value>
+  </data>
 </root>
