Add translations into Language resources in Public.Web #27

--- a/Public/src/Fnunez.VeterinaryClinic.Public.Web/Services/Language/Resources/Strings.en-US.resx
+++ b/Public/src/Fnunez.VeterinaryClinic.Public.Web/Services/Language/Resources/Strings.en-US.resx
@@ -117,4 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Appointment_Confirm_Message_Cheers" xml:space="preserve">
+    <value>Thanky you &#60;&#51;</value>
+  </data>
+  <data name="Appointment_Confirm_Message_KindRegards" xml:space="preserve">
+    <value>We will glad to see you soon!</value>
+  </data>
+  <data name="Appointment_Confirm_Message_Success" xml:space="preserve">
+    <value>The appointment has been successfully confirmed</value>
+  </data>
+  <data name="Appointment_Confirm_Title" xml:space="preserve">
+    <value>Confirm Appointment</value>
+  </data>
+  <data name="Appointment_ConfirmError_Message_Error" xml:space="preserve">
+    <value>Please call the Clinic to confirm the appointment or try again</value>
+  </data>
+  <data name="Appointment_ConfirmError_Message_KindRegards" xml:space="preserve">
+    <value>Please excuse the inconvenience</value>
+  </data>
+  <data name="Appointment_ConfirmError_Title" xml:space="preserve">
+    <value>Confirm Appointment</value>
+  </data>
 </root>
