Update Clinics spanish resource language in ClinicManagement.BlazorClient.Client #33

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clinics/ClinicsComponent.es-MX.resx
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Resources/Pages/Clinics/ClinicsComponent.es-MX.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Clinics_Add_Button_Text" xml:space="preserve">
-    <value>ADD</value>
+    <value>AGREGAR</value>
   </data>
   <data name="Clinics_AddedClinic_Alert_Button_Ok" xml:space="preserve">
     <value>ACEPTAR</value>
