Update AppointmentTypesComponent resource language in Scheduling.BlazorClient.Client #33

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/AppointmentTypes/AppointmentTypesComponent.en-US.resx
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Resources/Pages/AppointmentTypes/AppointmentTypesComponent.en-US.resx
@@ -121,7 +121,7 @@
     <value>Code</value>
   </data>
   <data name="AppointmentTypes_Grid_Column_Header_Duration" xml:space="preserve">
-    <value>Duration</value>
+    <value>Duration (minutes)</value>
   </data>
   <data name="AppointmentTypes_Grid_Column_Header_Id" xml:space="preserve">
     <value>Id</value>
